--- a/src/styles/wallet.scss
+++ b/src/styles/wallet.scss
@@ -1,56 +1,78 @@
+$primary-color: #051738;
+$card-color: #0F2140;
+
+$button: #025BFF;
+$button-hover: #003CBD;
+$background: #000D26;
+
+#card-wrapper {
+    margin: 0 auto;
+    background-color: $primary-color;
+    width: 78%;
+}
+
+#title {
+    color: white;
+    padding-left: 30px;
+    padding-top: 20px;
+}
+
 #nft-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 20px;
-    padding: 20px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 10px;
 }
 
 .nft-card {
     position: relative;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
+    width: 250px;
+    height: 250px;
+    background-color: $card-color;
+    margin-bottom: 50px;
+    border-radius: 20px 20px 0 0;
 }
 
 .nft-image {
-    position: relative;
-    width: 230px;
-    height: 230px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    border-radius: 10px 10px 0 0;
+    border-radius: 20px 20px 0 0;
 }
 
 .nft-name {
-    text-align: center;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 5%);
-    z-index: 2;
-    color: #000;
-    font-size: 16px;
-    background-color: #fff;
-    width: 90%;
+    top: 10px;
+    left: 10px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 5px 10px;
+    border-radius: 5px;
 }
 
 .nft-footer {
-    position: relative;
-    z-index: 2;
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: #fff;
-    border-radius: 0 0 10px 10px;
-}
-
-.nft-floor-price {
-
-    padding: 20px;
-    font-size: 15px;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    background-color: $card-color;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 0 0 20px 20px;
 }
 
 .nft-collection-logo {
-    width: 50px;
-    height: 50px;
-    object-fit: cover
+    width: 40px;
+    /* Adjust as needed */
+    height: 40px;
+    /* Adjust as needed */
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.nft-floor-price {
+    margin: 0;
+    color: white;
 }
